--- a/Ejer3.html
+++ b/Ejer3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
   <style>
     a {
       position: abosulute;
@@ -92,5 +92,5 @@
    <br><br>
    <br><br>
    <br><br>
-  <a href="/index.html"> Pagina principal </a>
+  <a href="index.html"> Pagina principal </a>
 </html>
