--- a/Ejer2.html
+++ b/Ejer2.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
   <style>
 
     h3 {
@@ -45,5 +45,5 @@ En Francia, <b>Georges Méliès</b>, uno de los pioneros del cine, tomaba la nov
   </body>
 
   
-  <a href="/index.html"> Pagina principal </a>
+  <a href="index.html"> Pagina principal </a>
 </html>
