--- a/Ejer1.html
+++ b/Ejer1.html
@@ -26,7 +26,7 @@
     }
   </style>
   
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
   <title>El primer documento HTML</title>
   
 </head>
@@ -52,7 +52,7 @@
 </div>
 
   <center>
-    <img src="/Imagenes/imposibleas.jpg" alt="Impossible Astronaut" width="500px">
+    <img src="Imagenes/imposibleas.jpg" alt="Impossible Astronaut" width="500px">
   </center>
 <br>
   <br>
@@ -60,7 +60,7 @@
 
 
   <bottom>
-  <a href="/index.html"> Pagina principal </a>
+  <a href="index.html"> Pagina principal </a>
   </bottom>
 </body>
 
